@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-18T01:00:24Z",
+  "timestamp" : "2022-06-18T08:13:55Z",
   "count_outdated" : 341,
   "uniques_outdated" : 183,
-  "count" : 370,
+  "count" : 369,
   "uniques" : 200,
   "clones" : [
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
