@@ -1,3 +1,10 @@
+2022-06-18T08:13:55Z:
+* notice: last 14d: unq all: 4 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 183 341 / 200 370
+* notice: next accum: outdated-unq outdated-all / unq all: 183 341 / 200 369
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-06-04]
+
 2022-06-18T01:00:24Z:
 * notice: last 14d: unq all: 4 29
 * notice: prev accum: outdated-unq outdated-all / unq all: 182 339 / 199 368
